# cheat-engine-linux

./: CMakeLists.txt  PLAN.md  README.md
analysis/: code_analysis.cpp  code_analysis.hpp  managed_runtime.cpp  managed_runtime.hpp  structure_tools.cpp  structure_tools.hpp
arch/: assembler.cpp  disassembler.cpp  disassembler.hpp
cli/: main.cpp
core/: autoasm.cpp  autoasm.hpp  ct_file.cpp  ct_file.hpp  expression.cpp  expression.hpp  trainer.cpp  types.hpp
debug/: breakpoint_manager.cpp  breakpoint_manager.hpp  code_finder.cpp  code_finder.hpp  debug_session.cpp  debug_session.hpp  gdb_remote.cpp  tracer.cpp
gui/: codefinder.cpp  codefinder.hpp  codereferences.cpp  codereferences.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  memorybrowser.cpp  memorybrowser.hpp  memoryfill.cpp  pointerscan_dialog.cpp  pointerscan_dialog.hpp  processlistdialog.cpp  registereditor.cpp  registereditor.hpp  scripteditor.cpp  scripteditor.hpp  settingsdialog.cpp  settingsdialog.hpp  stackview.cpp  stackview.hpp  structuredissector.cpp  structuredissector.hpp  threadlist.cpp
kernel/: cecore_kmod.c  cecore_kmod.h
platform/: process_api.hpp
platform/linux/: ceserver_client.cpp  ceserver_client.hpp  injector.cpp  injector.hpp  kernel_driver.cpp  kernel_driver.hpp  linux_process.cpp  linux_process.hpp  process_watcher.cpp  ptrace_wrapper.cpp  ptrace_wrapper.hpp
plugins/: plugin_loader.cpp  plugin_loader.hpp  speedhack.c
scanner/: memory_scanner.cpp  memory_scanner.hpp  pointer_scanner.cpp  pointer_scanner.hpp
scripting/: lua_bindings.cpp  lua_engine.cpp  lua_engine.hpp  lua_gui.cpp  lua_gui.hpp
symbols/: elf_symbols.cpp  elf_symbols.hpp  kernel_symbols.cpp
test/: main.cpp
